SecondStage - Syntax Analysis/pasc500.output
Terminals unused in grammar

    "comment"


State 69 conflicts: 6 shift/reduce
State 70 conflicts: 6 shift/reduce
State 123 conflicts: 6 shift/reduce
State 124 conflicts: 6 shift/reduce
State 125 conflicts: 6 shift/reduce
State 126 conflicts: 6 shift/reduce
State 127 conflicts: 6 shift/reduce
State 128 conflicts: 6 shift/reduce
State 176 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: header declarations subprograms comp_statement "."

    2 header: "PROGRAM" "identifier" ";"

    3 declarations: constdefs typedefs vardefs

    4 constdefs: "CONST" constant_defs ";"
    5          | %empty

    6 constant_defs: constant_defs ";" "identifier" "=" expression
    7              | "identifier" "=" expression

    8 expression: expression ">= or | or <= or | or <> or | or > or | or<" expression
    9           | expression "=" expression
   10           | expression "IN" expression
   11           | expression "OR" expression
   12           | expression "ADD" expression
   13           | expression "* or / or DIV or MOD or AND" expression
   14           | "ADD" expression
   15           | "NOT" expression
   16           | variable
   17           | "identifier" "(" expressions ")"
   18           | constant
   19           | "(" expression ")"
   20           | setexpression

   21 variable: "identifier"
   22         | variable "." "identifier"
   23         | variable "[" expressions "]"

   24 expressions: expressions "," expression
   25            | expression

   26 constant: "integer const"
   27         | "unsigned float const"
   28         | "boolean constant"
   29         | "character consant"

   30 setexpression: "[" elexpressions "]"
   31              | "[" "]"

   32 elexpressions: elexpressions "," elexpression
   33              | elexpression

   34 elexpression: expression ".." expression
   35             | expression

   36 typedefs: "TYPE" type_defs ";"
   37         | %empty

   38 type_defs: type_defs ";" "identifier" "=" type_def
   39          | "identifier" "=" type_def

   40 type_def: "ARRAY" "[" dims "]" "OF" typename
   41         | "SET" "OF" typename
   42         | "RECORD" fields "END"
   43         | "(" identifiers ")"
   44         | limit ".." limit

   45 dims: dims "," limits
   46     | limits

   47 limits: limit ".." limit
   48       | "identifier"

   49 limit: "ADD" "integer const"
   50      | "ADD" "identifier"
   51      | "integer const"
   52      | "character consant"
   53      | "boolean constant"
   54      | "identifier"

   55 typename: standard_type
   56         | "identifier"

   57 standard_type: "INTEGER"
   58              | "REAL"
   59              | "BOOLEAN"
   60              | "CHAR"

   61 fields: fields ";" field
   62       | field

   63 field: identifiers ":" typename

   64 identifiers: identifiers "," "identifier"
   65            | "identifier"

   66 vardefs: "VAR" variable_defs ";"
   67        | %empty

   68 variable_defs: variable_defs ";" identifiers ":" typename
   69              | identifiers ":" typename

   70 subprograms: subprograms subprogram ";"
   71            | %empty

   72 subprogram: sub_header ";" "FORWARD"
   73           | sub_header ";" declarations subprograms comp_statement

   74 sub_header: "FUNCTION" "identifier" formal_parameters ":" standard_type
   75           | "PROCEDURE" "identifier" formal_parameters
   76           | "FUNCTION" "identifier"

   77 formal_parameters: "(" parameter_list ")"
   78                  | %empty

   79 parameter_list: parameter_list ";" pass identifiers ":" typename
   80               | pass identifiers ":" typename

   81 pass: "VAR"
   82     | %empty

   83 comp_statement: "BEGIN" statements "END"

   84 statements: statements ";" statement
   85           | statement

   86 statement: assignment
   87          | if_statement
   88          | while_statement
   89          | for_statement
   90          | with_statement
   91          | subprogram_call
   92          | io_statement
   93          | comp_statement
   94          | %empty

   95 assignment: variable ":=" expression
   96           | variable ":=" "string constant"

   97 if_statement: "IF" expression "THEN" statement if_tail

   98 if_tail: "ELSE" statement
   99        | %empty

  100 while_statement: "WHILE" expression "DO" statement

  101 for_statement: "FOR" "identifier" ":=" iter_space "DO" statement

  102 iter_space: expression "TO" expression
  103           | expression "DOWNTO" expression

  104 with_statement: "WITH" variable "DO" statement

  105 subprogram_call: "identifier"
  106                | "identifier" "(" expressions ")"

  107 io_statement: "READ" "(" read_list ")"
  108             | "WRITE" "(" write_list ")"

  109 read_list: read_list "," read_item
  110          | read_item

  111 read_item: variable

  112 write_list: write_list "," write_item
  113           | write_item

  114 write_item: expression
  115           | "string constant"


Terminals, with rules where they appear

    "end of file" <strval> (0) 0
    error (256)
    "PROGRAM" <strval> (258) 2
    "BEGIN" <strval> (259) 83
    "END" <strval> (260) 42 83
    "PROCEDURE" <strval> (261) 75
    "FUNCTION" <strval> (262) 74 76
    "FORWARD" <strval> (263) 72
    "CONST" <strval> (264) 4
    "TYPE" <strval> (265) 36
    "ARRAY" <strval> (266) 40
    "VAR" <strval> (267) 66 81
    "INTEGER" <strval> (268) 57
    "REAL" <strval> (269) 58
    "BOOLEAN" <strval> (270) 59
    "RECORD" <strval> (271) 42
    "CHAR" <strval> (272) 60
    "SET" <strval> (273) 41
    "IF" <strval> (274) 97
    "WHILE" <strval> (275) 100
    "DO" <strval> (276) 100 101 104
    "FOR" <strval> (277) 101
    "ELSE" <strval> (278) 98
    "THEN" <strval> (279) 97
    "DOWNTO" <strval> (280) 103
    "TO" <strval> (281) 102
    "OF" <strval> (282) 40 41
    "WITH" <strval> (283) 104
    "READ" <strval> (284) 107
    "WRITE" <strval> (285) 108
    ">= or | or <= or | or <> or | or > or | or<" <strval> (286) 8
    "ADD" <strval> (287) 12 14 49 50
    "OR" <strval> (288) 11
    "* or / or DIV or MOD or AND" <strval> (289) 13
    "NOT" <strval> (290) 15
    "IN" <strval> (291) 10
    "(" <strval> (292) 17 19 43 77 106 107 108
    ")" <strval> (293) 17 19 43 77 106 107 108
    "." <strval> (294) 1 22
    "," <strval> (295) 24 32 45 64 109 112
    "=" <strval> (296) 6 7 9 38 39
    ":" <strval> (297) 63 68 69 74 79 80
    "[" <strval> (298) 23 30 31 40
    "]" <strval> (299) 23 30 31 40
    ":=" <strval> (300) 95 96 101
    ".." <strval> (301) 34 44 47
    ";" <strval> (302) 2 4 6 36 38 61 66 68 70 72 73 79 84
    "identifier" <strval> (303) 2 6 7 17 21 22 38 39 48 50 54 56 64 65 74 75 76 101 105 106
    "integer const" <intval> (304) 26 49 51
    "unsigned float const" <floatval> (305) 27
    "boolean constant" <strval> (306) 28 53
    "character consant" <charval> (307) 29 52
    "string constant" <strval> (308) 96 115
    "comment" <strval> (309)


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    program (56)
        on left: 1
        on right: 0
    header (57)
        on left: 2
        on right: 1
    declarations (58)
        on left: 3
        on right: 1 73
    constdefs (59)
        on left: 4 5
        on right: 3
    constant_defs (60)
        on left: 6 7
        on right: 4 6
    expression (61)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 6 7 8 9 10 11 12 13 14 15 19 24 25 34 35 95 97 100 102 103 114
    variable (62)
        on left: 21 22 23
        on right: 16 22 23 95 96 104 111
    expressions (63)
        on left: 24 25
        on right: 17 23 24 106
    constant (64)
        on left: 26 27 28 29
        on right: 18
    setexpression (65)
        on left: 30 31
        on right: 20
    elexpressions (66)
        on left: 32 33
        on right: 30 32
    elexpression (67)
        on left: 34 35
        on right: 32 33
    typedefs (68)
        on left: 36 37
        on right: 3
    type_defs (69)
        on left: 38 39
        on right: 36 38
    type_def (70)
        on left: 40 41 42 43 44
        on right: 38 39
    dims (71)
        on left: 45 46
        on right: 40 45
    limits (72)
        on left: 47 48
        on right: 45 46
    limit (73)
        on left: 49 50 51 52 53 54
        on right: 44 47
    typename (74)
        on left: 55 56
        on right: 40 41 63 68 69 79 80
    standard_type (75)
        on left: 57 58 59 60
        on right: 55 74
    fields (76)
        on left: 61 62
        on right: 42 61
    field (77)
        on left: 63
        on right: 61 62
    identifiers (78)
        on left: 64 65
        on right: 43 63 64 68 69 79 80
    vardefs (79)
        on left: 66 67
        on right: 3
    variable_defs (80)
        on left: 68 69
        on right: 66 68
    subprograms (81)
        on left: 70 71
        on right: 1 70 73
    subprogram (82)
        on left: 72 73
        on right: 70
    sub_header (83)
        on left: 74 75 76
        on right: 72 73
    formal_parameters (84)
        on left: 77 78
        on right: 74 75
    parameter_list (85)
        on left: 79 80
        on right: 77 79
    pass (86)
        on left: 81 82
        on right: 79 80
    comp_statement (87)
        on left: 83
        on right: 1 73 93
    statements (88)
        on left: 84 85
        on right: 83 84
    statement (89)
        on left: 86 87 88 89 90 91 92 93 94
        on right: 84 85 97 98 100 101 104
    assignment (90)
        on left: 95 96
        on right: 86
    if_statement (91)
        on left: 97
        on right: 87
    if_tail (92)
        on left: 98 99
        on right: 97
    while_statement (93)
        on left: 100
        on right: 88
    for_statement (94)
        on left: 101
        on right: 89
    iter_space (95)
        on left: 102 103
        on right: 101
    with_statement (96)
        on left: 104
        on right: 90
    subprogram_call (97)
        on left: 105 106
        on right: 91
    io_statement (98)
        on left: 107 108
        on right: 92
    read_list (99)
        on left: 109 110
        on right: 107 109
    read_item (100)
        on left: 111
        on right: 109 110
    write_list (101)
        on left: 112 113
        on right: 108 112
    write_item (102)
        on left: 114 115
        on right: 112 113


State 0

    0 $accept: . program "end of file"

    "PROGRAM"  shift, and go to state 1

    program  go to state 2
    header   go to state 3


State 1

    2 header: "PROGRAM" . "identifier" ";"

    "identifier"  shift, and go to state 4


State 2

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 5


State 3

    1 program: header . declarations subprograms comp_statement "."

    "CONST"  shift, and go to state 6

    $default  reduce using rule 5 (constdefs)

    declarations  go to state 7
    constdefs     go to state 8


State 4

    2 header: "PROGRAM" "identifier" . ";"

    ";"  shift, and go to state 9


State 5

    0 $accept: program "end of file" .

    $default  accept


State 6

    4 constdefs: "CONST" . constant_defs ";"

    "identifier"  shift, and go to state 10

    constant_defs  go to state 11


State 7

    1 program: header declarations . subprograms comp_statement "."

    $default  reduce using rule 71 (subprograms)

    subprograms  go to state 12


State 8

    3 declarations: constdefs . typedefs vardefs

    "TYPE"  shift, and go to state 13

    $default  reduce using rule 37 (typedefs)

    typedefs  go to state 14


State 9

    2 header: "PROGRAM" "identifier" ";" .

    $default  reduce using rule 2 (header)


State 10

    7 constant_defs: "identifier" . "=" expression

    "="  shift, and go to state 15


State 11

    4 constdefs: "CONST" constant_defs . ";"
    6 constant_defs: constant_defs . ";" "identifier" "=" expression

    ";"  shift, and go to state 16


State 12

    1 program: header declarations subprograms . comp_statement "."
   70 subprograms: subprograms . subprogram ";"

    "BEGIN"      shift, and go to state 17
    "PROCEDURE"  shift, and go to state 18
    "FUNCTION"   shift, and go to state 19

    subprogram      go to state 20
    sub_header      go to state 21
    comp_statement  go to state 22


State 13

   36 typedefs: "TYPE" . type_defs ";"

    "identifier"  shift, and go to state 23

    type_defs  go to state 24


State 14

    3 declarations: constdefs typedefs . vardefs

    "VAR"  shift, and go to state 25

    $default  reduce using rule 67 (vardefs)

    vardefs  go to state 26


State 15

    7 constant_defs: "identifier" "=" . expression

    "ADD"                   shift, and go to state 27
    "NOT"                   shift, and go to state 28
    "("                     shift, and go to state 29
    "["                     shift, and go to state 30
    "identifier"            shift, and go to state 31
    "integer const"         shift, and go to state 32
    "unsigned float const"  shift, and go to state 33
    "boolean constant"      shift, and go to state 34
    "character consant"     shift, and go to state 35

    expression     go to state 36
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 16

    4 constdefs: "CONST" constant_defs ";" .
    6 constant_defs: constant_defs ";" . "identifier" "=" expression

    "identifier"  shift, and go to state 40

    $default  reduce using rule 4 (constdefs)


State 17

   83 comp_statement: "BEGIN" . statements "END"

    "BEGIN"       shift, and go to state 17
    "IF"          shift, and go to state 41
    "WHILE"       shift, and go to state 42
    "FOR"         shift, and go to state 43
    "WITH"        shift, and go to state 44
    "READ"        shift, and go to state 45
    "WRITE"       shift, and go to state 46
    "identifier"  shift, and go to state 47

    $default  reduce using rule 94 (statement)

    variable         go to state 48
    comp_statement   go to state 49
    statements       go to state 50
    statement        go to state 51
    assignment       go to state 52
    if_statement     go to state 53
    while_statement  go to state 54
    for_statement    go to state 55
    with_statement   go to state 56
    subprogram_call  go to state 57
    io_statement     go to state 58


State 18

   75 sub_header: "PROCEDURE" . "identifier" formal_parameters

    "identifier"  shift, and go to state 59


State 19

   74 sub_header: "FUNCTION" . "identifier" formal_parameters ":" standard_type
   76           | "FUNCTION" . "identifier"

    "identifier"  shift, and go to state 60


State 20

   70 subprograms: subprograms subprogram . ";"

    ";"  shift, and go to state 61


State 21

   72 subprogram: sub_header . ";" "FORWARD"
   73           | sub_header . ";" declarations subprograms comp_statement

    ";"  shift, and go to state 62


State 22

    1 program: header declarations subprograms comp_statement . "."

    "."  shift, and go to state 63


State 23

   39 type_defs: "identifier" . "=" type_def

    "="  shift, and go to state 64


State 24

   36 typedefs: "TYPE" type_defs . ";"
   38 type_defs: type_defs . ";" "identifier" "=" type_def

    ";"  shift, and go to state 65


State 25

   66 vardefs: "VAR" . variable_defs ";"

    "identifier"  shift, and go to state 66

    identifiers    go to state 67
    variable_defs  go to state 68


State 26

    3 declarations: constdefs typedefs vardefs .

    $default  reduce using rule 3 (declarations)


State 27

   14 expression: "ADD" . expression

    "ADD"                   shift, and go to state 27
    "NOT"                   shift, and go to state 28
    "("                     shift, and go to state 29
    "["                     shift, and go to state 30
    "identifier"            shift, and go to state 31
    "integer const"         shift, and go to state 32
    "unsigned float const"  shift, and go to state 33
    "boolean constant"      shift, and go to state 34
    "character consant"     shift, and go to state 35

    expression     go to state 69
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 28

   15 expression: "NOT" . expression

    "ADD"                   shift, and go to state 27
    "NOT"                   shift, and go to state 28
    "("                     shift, and go to state 29
    "["                     shift, and go to state 30
    "identifier"            shift, and go to state 31
    "integer const"         shift, and go to state 32
    "unsigned float const"  shift, and go to state 33
    "boolean constant"      shift, and go to state 34
    "character consant"     shift, and go to state 35

    expression     go to state 70
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 29

   19 expression: "(" . expression ")"

    "ADD"                   shift, and go to state 27
    "NOT"                   shift, and go to state 28
    "("                     shift, and go to state 29
    "["                     shift, and go to state 30
    "identifier"            shift, and go to state 31
    "integer const"         shift, and go to state 32
    "unsigned float const"  shift, and go to state 33
    "boolean constant"      shift, and go to state 34
    "character consant"     shift, and go to state 35

    expression     go to state 71
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 30

   30 setexpression: "[" . elexpressions "]"
   31              | "[" . "]"

    "ADD"                   shift, and go to state 27
    "NOT"                   shift, and go to state 28
    "("                     shift, and go to state 29
    "["                     shift, and go to state 30
    "]"                     shift, and go to state 72
    "identifier"            shift, and go to state 31
    "integer const"         shift, and go to state 32
    "unsigned float const"  shift, and go to state 33
    "boolean constant"      shift, and go to state 34
    "character consant"     shift, and go to state 35

    expression     go to state 73
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39
    elexpressions  go to state 74
    elexpression   go to state 75


State 31

   17 expression: "identifier" . "(" expressions ")"
   21 variable: "identifier" .

    "("  shift, and go to state 76

    $default  reduce using rule 21 (variable)


State 32

   26 constant: "integer const" .

    $default  reduce using rule 26 (constant)


State 33

   27 constant: "unsigned float const" .

    $default  reduce using rule 27 (constant)


State 34

   28 constant: "boolean constant" .

    $default  reduce using rule 28 (constant)


State 35

   29 constant: "character consant" .

    $default  reduce using rule 29 (constant)


State 36

    7 constant_defs: "identifier" "=" expression .
    8 expression: expression . ">= or | or <= or | or <> or | or > or | or<" expression
    9           | expression . "=" expression
   10           | expression . "IN" expression
   11           | expression . "OR" expression
   12           | expression . "ADD" expression
   13           | expression . "* or / or DIV or MOD or AND" expression

    ">= or | or <= or | or <> or | or > or | or<"  shift, and go to state 77
    "ADD"                                          shift, and go to state 78
    "OR"                                           shift, and go to state 79
    "* or / or DIV or MOD or AND"                  shift, and go to state 80
    "IN"                                           shift, and go to state 81
    "="                                            shift, and go to state 82

    $default  reduce using rule 7 (constant_defs)


State 37

   16 expression: variable .
   22 variable: variable . "." "identifier"
   23         | variable . "[" expressions "]"

    "."  shift, and go to state 83
    "["  shift, and go to state 84

    $default  reduce using rule 16 (expression)


State 38

   18 expression: constant .

    $default  reduce using rule 18 (expression)


State 39

   20 expression: setexpression .

    $default  reduce using rule 20 (expression)


State 40

    6 constant_defs: constant_defs ";" "identifier" . "=" expression

    "="  shift, and go to state 85


State 41

   97 if_statement: "IF" . expression "THEN" statement if_tail

    "ADD"                   shift, and go to state 27
    "NOT"                   shift, and go to state 28
    "("                     shift, and go to state 29
    "["                     shift, and go to state 30
    "identifier"            shift, and go to state 31
    "integer const"         shift, and go to state 32
    "unsigned float const"  shift, and go to state 33
    "boolean constant"      shift, and go to state 34
    "character consant"     shift, and go to state 35

    expression     go to state 86
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 42

  100 while_statement: "WHILE" . expression "DO" statement

    "ADD"                   shift, and go to state 27
    "NOT"                   shift, and go to state 28
    "("                     shift, and go to state 29
    "["                     shift, and go to state 30
    "identifier"            shift, and go to state 31
    "integer const"         shift, and go to state 32
    "unsigned float const"  shift, and go to state 33
    "boolean constant"      shift, and go to state 34
    "character consant"     shift, and go to state 35

    expression     go to state 87
    variable       go to state 37
    constant       go to state 38
    setexpression  go to state 39


State 43

  101 for_statement: "FOR" . "identifier" ":=" iter_space "DO" statement

    "identifier"  shift, and go to state 88


State 44

  104 with_statement: "WITH" . variable "DO" statement

    "identifier"  shift, and go to state 89

    variable  go to state 90


State 45

  107 io_statement: "READ" . "(" read_list ")"

    "("  shift, and go to state 91


State 46

  108 io_statement: "WRITE" . "(" write_list ")"

    "("  shift, and go to state 92


State 47

   21 variable: "identifier" .
  105 subprogram_call: "identifier" .
  106                | "identifier" . "(" expressions ")"

    "("  shift, and go to state 93

    "END"     reduce using rule 105 (subprogram_call)
    "ELSE"    reduce using rule 105 (subprogram_call)
    ";"       reduce using rule 105 (subprogram_call)
    $default  reduce using rule 21 (variable)


State 48

   22 variable: variable . "." "identifier"
   23         | variable . "[" expressions "]"
   95 assignment: variable . ":=" expression
   96           | variable . ":=" "string constant"

    "."   shift, and go to state 83
    "["   shift, and go to state 84
    ":="  shift, and go to state 94


State 49

   93 statement: comp_statement .

    $default  reduce using rule 93 (statement)


State 50

   83 comp_statement: "BEGIN" statements . "END"
   84 statements: statements . ";" statement

    "END"  shift, and go to state 95
    ";"    shift, and go to state 96


State 51

   85 statements: statement .

    $default  reduce using rule 85 (statements)


State 52

   86 statement: assignment .

    $default  reduce using rule 86 (statement)


State 53

   87 statement: if_statement .

    $default  reduce using rule 87 (statement)


State 54

   88 statement: while_statement .

    $default  reduce using rule 88 (statement)


State 55

   89 statement: for_statement .

    $default  reduce using rule 89 (statement)


State 56

   90 statement: with_statement .

    $default  reduce using rule 90 (statement)


State 57

   91 statement: subprogram_call .

    $default  reduce using rule 91 (statement)


State 58

   92 statement: io_statement .

    $default  reduce using rule 92 (statement)


State 59

   75 sub_header: "PROCEDURE" "identifier" . formal_parameters

    "("  shift, and go to state 97

    $default  reduce using rule 78 (formal_parameters)

    formal_parameters  go to state 98


State 60

   74 sub_header: "FUNCTION" "identifier" . formal_parameters ":" standard_type
   76           | "FUNCTION" "identifier" .

    "("  shift, and go to state 97

    ":"       reduce using rule 78 (formal_parameters)
    $default  reduce using rule 76 (sub_header)

    formal_parameters  go to state 99


State 61

   70 subprograms: subprograms subprogram ";" .

    $default  reduce using rule 70 (subprograms)


State 62

   72 subprogram: sub_header ";" . "FORWARD"
   73           | sub_header ";" . declarations subprograms comp_statement

    "FORWARD"  shift, and go to state 100
    "CONST"    shift, and go to state 6

    $default  reduce using rule 5 (constdefs)

    declarations  go to state 101
    constdefs     go to state 8


State 63

    1 program: header declarations subprograms comp_statement "." .

    $default  reduce using rule 1 (program)


State 64

   39 type_defs: "identifier" "=" . type_def

    "ARRAY"              shift, and go to state 102
    "RECORD"             shift, and go to state 103
    "SET"                shift, and go to state 104
    "ADD"                shift, and go to state 105
    "("                  shift, and go to state 106
    "identifier"         shift, and go to state 107
    "integer const"      shift, and go to state 108
    "boolean constant"   shift, and go to state 109
    "character consant"  shift, and go to state 110

    type_def  go to state 111
    limit     go to state 112


State 65

   36 typedefs: "TYPE" type_defs ";" .
   38 type_defs: type_defs ";" . "identifier" "=" type_def
